--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^10.4.17",
     "axios": "^1.6.7",
     "joi": "^17.12.2",
+    "moment": "^2.30.1",
     "postcss": "^8.4.35",
     "postcss-cli": "^11.0.0",
     "react": "^18.2.0",
@@ -50,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "daisyui": "^4.7.3"
   }
 }
