--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.17",
     "axios": "^1.6.7",
+    "embla-carousel-react": "^8.0.0",
     "joi": "^17.12.2",
     "moment": "^2.30.1",
     "postcss": "^8.4.35",
