--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.4",
+    "simplebar": "^6.2.5",
+    "socket.io-client": "^4.7.5",
     "tailwindcss": "^3.4.1",
     "web-vitals": "^2.1.4"
   },
